--- a/Project/ProjectVS2017.vcxproj.filters
+++ b/Project/ProjectVS2017.vcxproj.filters
@@ -173,6 +173,9 @@
     <ClCompile Include="Explanation.cpp">
       <Filter>ソース ファイル\Tutorial</Filter>
     </ClCompile>
+    <ClCompile Include="FadeIn.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrowAction.h">
@@ -316,6 +319,7 @@
     <ClInclude Include="Explanation.h">
       <Filter>ソース ファイル\Tutorial</Filter>
     </ClInclude>
+    <ClInclude Include="FadeIn.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Version.rc">
