--- a/Project/ProjectVS2017.vcxproj.filters
+++ b/Project/ProjectVS2017.vcxproj.filters
@@ -27,6 +27,9 @@
     <Filter Include="ソース ファイル\Tutorial">
       <UniqueIdentifier>{99c1462c-3573-4904-8e15-5117403ebc0a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\EndGameProcess">
+      <UniqueIdentifier>{f9598f38-e96f-462a-b48e-fde7ef7d7804}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp">
@@ -155,9 +158,6 @@
     <ClCompile Include="Map.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="GameClear.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="AxeAction.cpp">
       <Filter>ソース ファイル\GameScene\Action</Filter>
     </ClCompile>
@@ -174,6 +174,18 @@
       <Filter>ソース ファイル\Tutorial</Filter>
     </ClCompile>
     <ClCompile Include="FadeIn.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="EndGameProcess.cpp">
+      <Filter>ソース ファイル\EndGameProcess</Filter>
+    </ClCompile>
+    <ClCompile Include="GameClear.cpp">
+      <Filter>ソース ファイル\EndGameProcess</Filter>
+    </ClCompile>
+    <ClCompile Include="GameOver.cpp">
+      <Filter>ソース ファイル\EndGameProcess</Filter>
+    </ClCompile>
+    <ClCompile Include="IEndGameProcess.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -301,9 +313,6 @@
     <ClInclude Include="BlockManager.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="GameClear.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="Map.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
@@ -320,6 +329,18 @@
       <Filter>ソース ファイル\Tutorial</Filter>
     </ClInclude>
     <ClInclude Include="FadeIn.h" />
+    <ClInclude Include="GameOver.h">
+      <Filter>ソース ファイル\EndGameProcess</Filter>
+    </ClInclude>
+    <ClInclude Include="EndGameProcess.h">
+      <Filter>ソース ファイル\EndGameProcess</Filter>
+    </ClInclude>
+    <ClInclude Include="GameClear.h">
+      <Filter>ソース ファイル\EndGameProcess</Filter>
+    </ClInclude>
+    <ClInclude Include="IEndGameProcess.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Version.rc">
